--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,7 +2,7 @@
 
 <body>
 
-    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar bg-black">
         <div class="container">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
