--- a/_includes/body.html
+++ b/_includes/body.html
@@ -8,7 +8,7 @@
                         <!-- Left -->
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="#">Home
+                                <a href="/" class="{% if page.url == '/index.html' %}current{% endif %} nav-link">Home
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
