--- a/styles/style.css
+++ b/styles/style.css
@@ -432,3 +432,49 @@ a.post:hover article h2,
 a.post:active article h2 {
   text-decoration: underline;
 }
+
+div.stats a, div.stats a:visited,
+div.buttons a, div.buttons a:visited,
+a.post div.continue, a.post:visited div.continue {
+    color: #44b;
+}
+
+div.stats a:hover, div.stats a:active,
+div.buttons a:hover, div.buttons a:active,
+a.post:hover div.continue, a.post:active div.continue {
+    color: #226;
+    text-decoration: underline;     /* for the a.post div.continue */
+}
+
+div.stats {
+    float: left;
+}
+
+div.buttons, div.continue {
+    float: right;
+}
+
+div.buttons > * {
+    display: inline-block;
+    height: 20px;
+    vertical-align: bottom !important;  /* override generated inline styles... */
+}
+
+/* XXX FIXME hack needed since this messes up layout. weird? */
+div.buttons > #fb-root {
+    display: none;
+}
+
+div#comments {
+    clear: both;
+    margin: 1em 0;
+    /* TODO min-height for an accurate layout sooner? */
+}
+
+/* for Facebook comments, override/customize styles as needed: */
+div.fb-comments {
+    display: block;
+}
+div.fb-comments span, div.fb-comments iframe {
+    width: 100% !important;
+}
