--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -14,7 +14,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/machine-learning/" target="_blank">Machine Learning</a>
+                        <a class="nav-link" href="/machinelearning/" target="_blank">Machine Learning</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" target="_blank">SAP UI5</a>
