--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ section: Blog
 og_type: article
 ---
 
-{% include head.html %}
+{% include bloghead.html %}
 {% include navbar.html %}
 
     <article>
