--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -63,7 +63,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="/styles/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="/styles/bootstrap.min.css" rel="stylesheet"> -->
     <!-- Material Design Bootstrap -->
     <link href="/styles/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
