--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -51,8 +51,6 @@
     <meta property="og:image" content="http://gravatar.com/avatar/5af2930e39246c8339fa7ad8e394e96e?s=200">
     {% endif %}
 
-    <meta property="fb:admins" content="704844" />
-    <meta property="fb:app_id" content="160410744017439" />
 
     <link rel="shortcut icon" href="/favicon.ico">
 
@@ -63,7 +61,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <!-- <link href="/styles/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="/styles/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
     <link href="/styles/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
