--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,7 @@
+    <link href="/styles/sidebar.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" ref="stylesheet">
+    <script src= "https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="/scripts/sidebar.js"></script>
 </head>
 
 <body>
