--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -59,9 +59,9 @@
     top: 50%;
   }
   .static__text {
-    width: 9rem;
-    position: absolute;
-    top: 50%;
+    width: 80rem;
+    position: relative;
+    top: 35%;
     left: 50%;
     margin-left: -5rem;
     -webkit-transform: translate3d(0, -50%, 0);
