--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -15,7 +15,7 @@
   }
   
   body {
-    background: linear-gradient(45deg, #636f85, #6960a0);
+    /* background: linear-gradient(45deg, #636f85, #6960a0); */
   }
   
   .demo {
@@ -92,7 +92,7 @@
   }
   
   .contact1{
-        background: url(images/pic1.jpg) no-repeat center;
+        background: url(../images/pic1.JPG) no-repeat center;
         height: 28%;
         width: 80%;
         border-radius: 50px;
