--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,19 +11,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
                 <!-- Left -->
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                <ul id="navMenu" class="navbar-nav mr-auto">
+                    <li id="idHome" class="nav-item active">
                         <a href="/" class="{% if page.url == '/index.html' %}current{% endif %} nav-link">Home
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
+                    <li id="idML" class="nav-item {% if page.url contains 'machinelearning' %}active{% endif %}">
                         <a class="nav-link" href="/machinelearning/" target="_blank">Machine Learning</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="idUI5" class="nav-item">
                         <a class="nav-link" href="#" target="_blank">SAP UI5</a>
                     </li>
-                    <li class="nav-item">
+                    <li id="idAbap" class="nav-item">
                         <a class="nav-link" href="#" target="_blank">ABAP</a>
                     </li>
                 </ul>
