--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,13 +18,13 @@
                         </a>
                     </li>
                     <li id="idML" class="nav-item {% if page.url contains 'machinelearning' %}active{% endif %}">
-                        <a class="nav-link" href="/machinelearning/" target="_blank">Machine Learning</a>
+                        <a class="nav-link" href="/machinelearning/" target="_self">Machine Learning</a>
                     </li>
                     <li id="idUI5" class="nav-item">
-                        <a class="nav-link" href="#" target="_blank">SAP UI5</a>
+                        <a class="nav-link" href="#" target="_self">SAP UI5</a>
                     </li>
                     <li id="idAbap" class="nav-item">
-                        <a class="nav-link" href="#" target="_blank">ABAP</a>
+                        <a class="nav-link" href="#" target="_self">ABAP</a>
                     </li>
                 </ul>
             </div>
