--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
 
                 <!-- Left -->
                 <ul id="navMenu" class="navbar-nav mr-auto">
-                    <li id="idHome" class="nav-item active">
+                    <li id="idHome" class="nav-item">
                         <a href="/" class="{% if page.url == '/index.html' %}current{% endif %} nav-link">Home
                             <span class="sr-only">(current)</span>
                         </a>
@@ -20,10 +20,10 @@
                     <li id="idML" class="nav-item {% if page.url contains 'machinelearning' %}active{% endif %}">
                         <a class="nav-link" href="/machinelearning/" target="_self">Machine Learning</a>
                     </li>
-                    <li id="idUI5" class="nav-item">
+                    <li id="idUI5" class="nav-item {% if page.url contains 'sapui5' %}active{% endif %}">
                         <a class="nav-link" href="#" target="_self">SAP UI5</a>
                     </li>
-                    <li id="idAbap" class="nav-item">
+                    <li id="idAbap" class="nav-item {% if page.url contains 'abap' %}active{% endif %}" >
                         <a class="nav-link" href="#" target="_self">ABAP</a>
                     </li>
                 </ul>
