--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -92,7 +92,7 @@
   }
   
   .contact1{
-        background: url(../images/pic1.JPG) no-repeat center;
+        background: url(images/pic1.JPG) no-repeat center;
         height: 28%;
         width: 80%;
         border-radius: 50px;
