--- a/_includes/body.html
+++ b/_includes/body.html
@@ -13,13 +13,13 @@
                                 </a>
                             </li>
                             <li class="nav-item">                                
-                                <a class="nav-link" href="/machinelearning/" target="_blank">Machine Learning</a>
+                                <a class="nav-link" href="/machinelearning/" >Machine Learning</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_blank">SAP UI5</a>
+                                <a class="nav-link" href="#" >SAP UI5</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#" target="_blank">ABAP</a>
+                                <a class="nav-link" href="#" >ABAP</a>
                             </li>
                         </ul>
                     </div>
