--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,14 +1,28 @@
-    <!-- Footer -->
-    <footer class="footer">
-        <a class="fa fa-facebook-official w3-hover-opacity"
-            href="https://www.facebook.com/gauravchaudhary.ait/about?section=overview" target="_blank"></a>
-        <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/gaurav.1.chaudhary/"
-            target="_blank"></a>
-        <a class="fa fa-github w3-hover-opacity" href="https://github.com/GauravChaudhary1" target="_blank"></a>
-        <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/ait_gaurav" target="_blank"></a>
-        <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/gaurav-chaudhary-53162593/"
-            target="_blank"></a>
-    </footer>
+<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="js/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="js/mdb.min.js"></script>
+<!-- Initializations -->
+<script type="text/javascript">
+    // Animations initialization
+    new WOW().init();
+</script>
+
+<!-- Footer -->
+<footer class="footer">
+    <a class="fa fa-facebook-official w3-hover-opacity"
+        href="https://www.facebook.com/gauravchaudhary.ait/about?section=overview" target="_blank"></a>
+    <a class="fa fa-instagram w3-hover-opacity" href="https://www.instagram.com/gaurav.1.chaudhary/"
+        target="_blank"></a>
+    <a class="fa fa-github w3-hover-opacity" href="https://github.com/GauravChaudhary1" target="_blank"></a>
+    <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/ait_gaurav" target="_blank"></a>
+    <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/gaurav-chaudhary-53162593/"
+        target="_blank"></a>
+</footer>
 
 </body>
+
 </html>
