--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,10 @@
     <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar bg-black">
         <div class="container">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
                 <!-- Left -->
                 <ul id="navMenu" class="navbar-nav mr-auto">
                     <li id="idHome" class="nav-item">
