--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,10 +1,10 @@
-<script type="text/javascript" src="/styles/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="/scripts/jquery-3.4.1.min.js"></script>
 <!-- Bootstrap tooltips -->
-<script type="text/javascript" src="/styles/popper.min.js"></script>
+<script type="text/javascript" src="/scripts/popper.min.js"></script>
 <!-- Bootstrap core JavaScript -->
-<script type="text/javascript" src="/styles/bootstrap.min.js"></script>
+<script type="text/javascript" src="/scripts/bootstrap.min.js"></script>
 <!-- MDB core JavaScript -->
-<script type="text/javascript" src="/styles/mdb.min.js"></script>
+<script type="text/javascript" src="/scripts/mdb.min.js"></script>
 <!-- Initializations -->
 <script type="text/javascript">
     // Animations initialization
