--- a/_includes/body.html
+++ b/_includes/body.html
@@ -22,10 +22,10 @@
                         <a class="nav-link" href="/machinelearning/">Machine Learning</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SAP UI5</a>
+                        <a class="nav-link" href="/sapui5/">SAP UI5</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">ABAP</a>
+                        <a class="nav-link" href="/abap/">ABAP</a>
                     </li>
                 </ul>
             </div>
