--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -30,7 +30,7 @@
     height: 100%;
     /* font-size: 1.8rem;
     font-family: "Open Sans", Helvetica, Arial, sans-serif; */
-    background: #6D7ADA;
+    background: #58b5b3;
   }
   .static:before, .static:after {
     content: "";
