--- a/styles/style.css
+++ b/styles/style.css
@@ -354,7 +354,7 @@
         }
 
         .bg-black {
-            background-color: black;
+            background-color: #58b5b3;
         }
         /** CONTENT **/
 
