--- a/_includes/body.html
+++ b/_includes/body.html
@@ -179,7 +179,7 @@
     <div id="blogs" class="wrap">
         {% for post in site.posts limit:6 %}
         <div class="box box{{ forloop.index }} shadow{{ forloop.index }} ">
-            <h3 style="color:black;"> {{ post.title }} </h3>
+            <h3 style="color:black; font-size: 1vw;"> {{ post.title }} </h3>
 
         </div>
 
