--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,7 +48,7 @@
     <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" />
     {% else %}
     <!-- XXX use my Gravatar as default OpenGraph image if none specified? -->
-    <meta property="og:image" content="http://gravatar.com/avatar/5af2930e39246c8339fa7ad8e394e96e?s=200">
+    <!-- <meta property="og:image" content="http://gravatar.com/avatar/5af2930e39246c8339fa7ad8e394e96e?s=200"> -->
     {% endif %}
 
     <meta property="fb:admins" content="704844" />
