--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -31,11 +31,6 @@
     {% capture pageURLAbs %}{{ site.url }}{{ pageURL }}{% endcapture %}
     {% capture pageURLAbsEsc %}{{ pageURLAbs | escape }}{% endcapture %}
 
-    <!-- <link rel="canonical" href="{{ pageURLAbsEsc }}"> -->
-
-    <!-- http://developers.facebook.com/docs/opengraph/ -->
-    <!-- TODO is there a better liquid way of "if x then x else y"?
-         "x or y" doesn't seem to work, neither "or" nor "||". -->
     {% capture ogTitle %}{% if page.title %}{{ pageTitleEsc }}{% elsif page.section %}{{ pageSectionEsc }}{% else %}{{ siteTitleEsc }}{% endif %}{% endcapture %}
     {% capture ogSiteName %}{% if page.title && page.section %}{{ pageSectionEsc }}
         - {% endif %}{{ siteTitleEsc }}{% endcapture %}
@@ -45,7 +40,7 @@
     <meta property="og:type" content="{% if page.og_type %}{{ page.og_type | escape }}{% else %}website{% endif %}" />
     <meta property="og:description" content="{{ descriptionEsc }}" />
     {% if page.image %}
-    <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" />
+    <!-- <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" /> -->
     {% else %}
     <!-- XXX use my Gravatar as default OpenGraph image if none specified? -->
     <!-- <meta property="og:image" content="http://gravatar.com/avatar/5af2930e39246c8339fa7ad8e394e96e?s=200"> -->
