--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,14 +47,10 @@
     {% if page.image %}
     <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" />
     {% else %}
-    <!-- XXX use my Gravatar as default OpenGraph image if none specified? -->
-    <!-- <meta property="og:image" content="http://gravatar.com/avatar/5af2930e39246c8339fa7ad8e394e96e?s=200"> -->
+    <meta property="og:image" content="/logo.JPG">
     {% endif %}
 
-    <meta property="fb:admins" content="704844" />
-    <meta property="fb:app_id" content="160410744017439" />
-
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="shortcut icon" href="/care.png">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
     <!-- Font Awesome -->
