--- a/styles/style.css
+++ b/styles/style.css
@@ -454,57 +454,48 @@ div.posts{
 
 /* container */
 
-#share {
-	width: 100%;
-  	margin: 100px auto;
-  	text-align: center;
+.icon-bar {
+  position: fixed;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
-/* buttons */
-
-#share a {
-	width: 50px;
-  	height: 50px;
-  	display: inline-block;
-  	margin: 8px;
-  	border-radius: 50%;
-  	font-size: 24px;
-  	color: #fff;
-	opacity: 0.75;
-	transition: opacity 0.15s linear;
+.icon-bar a {
+  display: block;
+  text-align: center;
+  padding: 16px;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 20px;
 }
 
-#share a:hover {
-	opacity: 1;
+.icon-bar a:hover {
+  background-color: #000;
 }
-
-/* icons */
-
-#share i {
-  	position: relative;
-  	top: 50%;
-  	transform: translateY(-50%);
-}
-
-/* colors */
 
 .facebook {
- 	background: #3b5998;
+  background: #3B5998;
+  color: white;
 }
 
 .twitter {
-  	background: #55acee;
+  background: #55ACEE;
+  color: white;
 }
 
-.googleplus {
-  	background: #dd4b39;
+.google {
+  background: #dd4b39;
+  color: white;
 }
 
 .linkedin {
-  	background: #0077b5;
+  background: #007bb5;
+  color: white;
 }
 
-.pinterest {
-  	background: #cb2027;
+.youtube {
+  background: #bb0000;
+  color: white;
 }
-
