--- a/styles/style.css
+++ b/styles/style.css
@@ -467,7 +467,7 @@ div.posts{
   text-align: center;
   padding: 16px;
   transition: all 0.3s ease;
-  color: white;
+  color: white!important;
   font-size: 20px;
 }
 
