--- a/_includes/share.html
+++ b/_includes/share.html
@@ -3,15 +3,15 @@
         {% capture postURLAbs %}{{ site.url }}{{ postURL }}{% endcapture %}
         {% capture postURLAbsEsc %}{{ postURLAbs | escape }}{% endcapture %}
         <!-- facebook -->
-        <a class="facebook" href="https://www.facebook.com/share.php?u={{ postURLAbs | escape }}&title={{ page.title }}" ><i class="fa fa-facebook"></i></a>
+        <a class="facebook icon-bar-a" href="https://www.facebook.com/share.php?u={{ postURLAbs | escape }}&title={{ page.title }}" ><i class="fa fa-facebook"></i></a>
       
         <!-- twitter -->
-        <a class="twitter" href="https://twitter.com/intent/tweet?status={{ page.title }}+{{ postURLAbs | escape }}" ><i class="fa fa-twitter"></i></a>
+        <a class="twitter icon-bar-a" href="https://twitter.com/intent/tweet?status={{ page.title }}+{{ postURLAbs | escape }}" ><i class="fa fa-twitter"></i></a>
       
         <!-- google plus -->
-        <a class="google" href="https://plus.google.com/share?url={{ postURLAbs | escape }}" ><i class="fa fa-google"></i></a>
+        <a class="google icon-bar-a" href="https://plus.google.com/share?url={{ postURLAbs | escape }}" ><i class="fa fa-google"></i></a>
       
         <!-- linkedin -->
-        <a class="linkedin" href="https://www.linkedin.com/shareArticle?mini=true&url={{ postURLAbs | escape }}&title={{ page.title }}" ><i class="fa fa-linkedin"></i></a>
+        <a class="linkedin icon-bar-a" href="https://www.linkedin.com/shareArticle?mini=true&url={{ postURLAbs | escape }}&title={{ page.title }}" ><i class="fa fa-linkedin"></i></a>
 
         </div>
