--- a/styles/style.css
+++ b/styles/style.css
@@ -460,6 +460,7 @@ div.posts{
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  z-index: 2;
 }
 
 .icon-bar-a {
