--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
     {% if page.image %}
     <!-- <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" /> -->
     {% else %}
-    <meta property="og:image" content="/logo.JPG">
+    <meta property="og:image" content="https://secure.gravatar.com/avatar/0daaf1fa8c0e1a060040713fed6fa2e9">
     {% endif %}
 
     <link rel="shortcut icon" href="/care.png">
