--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -42,9 +42,9 @@
     {% if page.image %}
     <!-- <meta property="og:image" content="{{ site.url | escape }}{{ page.image | escape }}" /> -->
     {% else %}
-    <meta property="og:image" content="https://secure.gravatar.com/avatar/0daaf1fa8c0e1a060040713fed6fa2e9">
+    <meta name= "image" property="og:image" content="https://secure.gravatar.com/avatar/0daaf1fa8c0e1a060040713fed6fa2e9">
     {% endif %}
-
+    <meta name="author" content="Gaurav Chaudhary">
 
     <link rel="shortcut icon" href="/care.png">
 
