--- a/_includes/body.html
+++ b/_includes/body.html
@@ -181,7 +181,7 @@
         {% capture postURL %}{{ page.url | remove:'.html' }}{% endcapture %}
         {% capture postURLAbs %}{{ site.url }}{{ postURL }}{% endcapture %}
         {% capture postURLAbsEsc %}{{ postURLAbs | escape }}{% endcapture %}
-        <div class="box box{{ forloop.index }} shadow{{ forloop.index }} " onclick="location.href='{{ postURLAbs | escape }}';" style="cursor: pointer;">
+        <div class="box box{{ forloop.index }} shadow{{ forloop.index }} " onclick="location.href='{{ postURL | escape }}';" style="cursor: pointer;">
             <h3 style="color:black; font-size: 1vw;"> {{ post.title }} </h3>
 
         </div>
