--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -61,3 +61,8 @@
     <!-- Your custom styles (optional) -->
     <link href="/styles/style.css" rel="stylesheet">
     <link href="/styles/blog.css" rel="stylesheet">
+    <style>
+    h3{
+        letter-spacing: 0px !important;  
+    }
+    </style>
