--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,1 +1,1 @@
-<div class="fb-comments" data-href="{page.url}" data-width="" data-numposts="5"></div>
+<div class="fb-comments" data-href="{% page.url %}" data-width="" data-numposts="5"></div>
