--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -69,6 +69,9 @@
     <!-- Your custom styles (optional) -->
     <link href="/styles/style.css" rel="stylesheet">
     <link href="/styles/blog.css" rel="stylesheet">
+
+    <meta property="fb:admins" content="gauravchaudhary.ait"/>
+
     <style>
     h3{
         letter-spacing: 0px !important;  
