--- a/styles/blog.css
+++ b/styles/blog.css
@@ -4878,6 +4878,10 @@ body {
     }
 }
 
+.fbcomments{
+    padding-left: 6rem;
+    padding-right: 6rem;
+}
 span>iframe{
     box-shadow: 
        inset 0 -3em 3em rgba(0,0,0,0.1), 
