--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,3 +1,3 @@
 {% capture pageURL %}{{ page.url }}{% endcapture %}
 {% capture postURLAbs %}{{ site.url }}{{ page.url }}{% endcapture %}
-<div class="fb-comments" data-href="{{postURLAbs}}" data-width="100%" data-numposts="5"></div>
+<div class="fb-comments fbcomments" data-href="{{postURLAbs}}" data-width="100%" data-numposts="5"></div>
