--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -69,7 +69,7 @@
     <!-- Your custom styles (optional) -->
     <link href="/styles/style.css" rel="stylesheet">
     <link href="/styles/blog.css" rel="stylesheet">
-
+    <meta name="google-site-verification" content="9R99NZXKzD8IpyREYl2YHhfhd7U1OPshcHTLtAodAuE"/>
     <meta property="fb:admins" content="gauravchaudhary.ait"/>
 
     <style>
