--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,7 @@
     <meta http-equiv="expires" content="0" />
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
+    <meta name="google-site-verification" content="9R99NZXKzD8IpyREYl2YHhfhd7U1OPshcHTLtAodAuE"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155324369-1"></script>
     <script>
