--- a/_includes/body.html
+++ b/_includes/body.html
@@ -164,6 +164,12 @@
                 <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">
                     <div class="w3-center w3-text-white">70%</div>
                 </div>
+            </div><br>
+            <h5 style="text-align: center;">Angular</h5>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">
+                    <div class="w3-center w3-text-white">70%</div>
+                </div>
             </div>
         </div>
     </div>
@@ -212,7 +218,7 @@
         });
         </script>
 
-    <script type="text/javascript" src="/scripts/jquery-3.4.1.min.js"></script>
+    <!-- <script type="text/javascript" src="/scripts/jquery-3.4.1.min.js"></script> -->
     <!-- Bootstrap tooltips -->
     <script type="text/javascript" src="/scripts/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
