--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -32,6 +32,14 @@
     font-family: "Open Sans", Helvetica, Arial, sans-serif; */
     background: #58b5b3;
   }
+
+  @keyframes arrows {
+    to {
+      transform: translateX(100%) rotate(45deg);
+      opacity: 0;
+    }
+  }
+
   .static:before, .static:after {
     content: "";
     position: absolute;
