--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,7 @@
     height:100px;
     margin-left:6%;
     border-radius:5px;
+    letter-spacing: 1.5px !important;
   }
   /****************************************************************
   *styling shadows
