--- a/_includes/bloghead.html
+++ b/_includes/bloghead.html
@@ -71,7 +71,12 @@
     <link href="/styles/blog.css" rel="stylesheet">
     <meta name="google-site-verification" content="9R99NZXKzD8IpyREYl2YHhfhd7U1OPshcHTLtAodAuE"/>
     <meta property="fb:admins" content="gauravchaudhary.ait"/>
-
+    <script async src="https://unpkg.com/mermaid@8.2.3/dist/mermaid.min.js"></script>
+    <script>
+    mermaid.initialize({
+        startOnLoad:true
+    });
+    </script>
     <style>
     h3{
         letter-spacing: 0px !important;  
