--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,6 +68,7 @@
     <link href="/styles/mdb.min.css" rel="stylesheet">
     <!-- Your custom styles (optional) -->
     <link href="/styles/style.css" rel="stylesheet">
+    <link href="/styles/blogcards.css" rel="stylesheet">
     <script async src="https://unpkg.com/mermaid@8.2.3/dist/mermaid.min.js"></script>
     <script>
     mermaid.initialize({
